tests/failing/checker/check_trait.out
tests/failing/checker/check_trait.ri:24:11: error: type `i32` does not implement trait `ToStr`
     |
  24 |     print(1); // BAD
     |           ^
     = note: in argument `v` of function `print`
rivetc: error: could not compile package `check_trait`, aborting due to previous error.